--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,12 @@
+/*******************************
+ *
+ * date     @2016/7/21
+ * author   @Luo ZhiYi
+ * desc     @css global
+ * github   @https://github.com/luozyiii/src/global.css
+ *
+ * ******************************/
+ 
 .clearfix:after {
     content: ".";
     height: 0;
