--- a/src/global.css
+++ b/src/global.css
@@ -27,3 +27,11 @@
 .js-ds-none,.ds-none {
     display: none !important;
 }
+.text-overflow {
+    display:block;          /*内联对象需加*/
+    width:31em;             /* 固定宽度 */
+    word-break:keep-all;    /* 不换行 */
+    white-space:nowrap;     /* 不换行 */
+    overflow:hidden;        /* 内容超出宽度时隐藏超出部分的内容 */
+    text-overflow:ellipsis; /* 当对象内文本溢出时显示省略标记(...) ；需与overflow:hidden;一起使用。*/
+}
