--- a/src/global.css
+++ b/src/global.css
@@ -35,6 +35,12 @@
     overflow:hidden;        /* 内容超出宽度时隐藏超出部分的内容 */
     text-overflow:ellipsis; /* 当对象内文本溢出时显示省略标记(...) ；需与overflow:hidden;一起使用。*/
 }
+.text-overflow-ellipsis {
+   display: -webkit-box;
+   -webkit-box-orient: vertical;
+   -webkit-line-clamp: 3;
+   overflow: hidden;
+}
 
 /* 我们通常写三角形都是用伪类 请务必写上属性 content="" */
 /* 向上的三角形 */
