--- a/src/global.css
+++ b/src/global.css
@@ -80,3 +80,15 @@
     border-left: 100px solid red;
     border-bottom: 50px solid transparent;
 }
+/* 快速滚动和回弹的效果 */
+.scrolling {
+    -webkit-overflow-scrolling : touch; 
+}
+/* 为元素设定的宽度和高度决定了元素的边框盒。
+就是说，为元素指定的任何内边距和边框都将在已设定的宽度和高度内进行绘制。
+通过从已设定的宽度和高度分别减去边框和内边距才能得到内容的宽度和高度。 */
+.border-box {
+    box-sizing:border-box;
+    -moz-box-sizing:border-box; /* Firefox */
+    -webkit-box-sizing:border-box; /* Safari */
+}
